feat 本地处理protobuf数据

--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -19,6 +19,7 @@
 		<PackageReference Include="AngleSharp.XPath" Version="2.0.1" />
 		<PackageReference Include="ConfigureAwaitChecker.Analyzer" PrivateAssets="all" Version="5.0.0.1" />
 		<PackageReference Include="Newtonsoft.Json" IncludeAssets="compile" Version="13.0.1" />
+		<PackageReference Include="protobuf-net" Version="3.0.101" />
 		<PackageReference Include="SteamKit2" IncludeAssets="compile" Version="2.4.1" />
 		<PackageReference Include="System.Composition.AttributedModel" Version="6.0.0" />
 	</ItemGroup>
