--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -21,6 +21,7 @@
 		<PackageReference Include="Newtonsoft.Json" IncludeAssets="compile" Version="13.0.1" />
 		<PackageReference Include="protobuf-net" Version="3.0.101" />
 		<PackageReference Include="SteamKit2" IncludeAssets="compile" Version="2.4.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0" />
 		<PackageReference Include="System.Composition.AttributedModel" Version="6.0.0" />
 	</ItemGroup>
 
@@ -51,10 +52,6 @@
 	<ItemGroup>
 		<None Include="..\.editorconfig" Link=".editorconfig" />
 	</ItemGroup>
-
-	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-	  <Exec Command="powershell -Command &quot;&amp;'$(ProjectDir)scripts\Pre-Build.ps1' '$(ProjectDir)'&quot;" />
-	</Target>
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 		<Copy SourceFiles="$(TargetPath)" DestinationFolder="..\ArchiSteamFarm\ArchiSteamFarm\bin\$(Configuration)\$(TargetFramework)\plugins\" SkipUnchangedFiles="true" />
