--- a/.github/workflows/AutoBuild.yml
+++ b/.github/workflows/AutoBuild.yml
@@ -53,7 +53,7 @@ jobs:
         continue-on-error: true
         uses: actions/upload-artifact@v3.1.1
         with:
-          name: ${{ matrix.language }}
+          name: ${{ env.PROJECT_NAME }}-${{ matrix.language }}
           path: ./dist/${{ matrix.language }}.zip
 
   release:
