--- a/.github/workflows/AutoBuild.yml
+++ b/.github/workflows/AutoBuild.yml
@@ -47,14 +47,14 @@ jobs:
         run: dotnet publish ${{ env.PROJECT_NAME }} -o ./tmp/ -c Release
 
       - name: Zip files
-        run: 7z a -bd -slp -tzip -mm=Deflate -mx=5 -mfb=150 -mpass=10 "./dist/${{ matrix.language }}.zip" "./tmp/${{ env.PROJECT_NAME }}.dll"
+        run: 7z a -bd -slp -tzip -mm=Deflate -mx=5 -mfb=150 -mpass=10 "./dist/${{ env.PROJECT_NAME }}-${{ matrix.language }}.zip" "./tmp/${{ env.PROJECT_NAME }}.dll"
 
       - name: Upload ${{ env.PROJECT_NAME }} ${{ matrix.language }}
         continue-on-error: true
         uses: actions/upload-artifact@v3.1.1
         with:
           name: ${{ env.PROJECT_NAME }}-${{ matrix.language }}.zip
-          path: ./dist/${{ matrix.language }}.zip
+          path: ./dist/${{ env.PROJECT_NAME }}-${{ matrix.language }}.zip
 
   release:
     needs: build
