--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -11,9 +11,9 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 	<ItemGroup>
-	  <None Remove="Data\FlyoutPage1.xaml" />
-	  <None Remove="Data\FlyoutPage1Detail.xaml" />
-	  <None Remove="Data\FlyoutPage1Flyout.xaml" />
+		<None Remove="Data\FlyoutPage1.xaml" />
+		<None Remove="Data\FlyoutPage1Detail.xaml" />
+		<None Remove="Data\FlyoutPage1Flyout.xaml" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -23,7 +23,7 @@
 	<ItemGroup>
 		<PackageReference Include="AngleSharp.XPath" Version="2.0.1" />
 		<PackageReference Include="ConfigureAwaitChecker.Analyzer" PrivateAssets="all" Version="5.0.0.1" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+		<PackageReference Include="Newtonsoft.Json" IncludeAssets="compile" Version="13.0.2" />
 		<PackageReference Include="protobuf-net" Version="3.0.101" />
 		<PackageReference Include="SteamKit2" IncludeAssets="compile" Version="2.4.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0" />
@@ -37,9 +37,9 @@
 			<DependentUpon>Langs.resx</DependentUpon>
 		</Compile>
 		<Compile Update="Localization\Static.Designer.cs">
-		  <DesignTime>True</DesignTime>
-		  <AutoGen>True</AutoGen>
-		  <DependentUpon>Static.resx</DependentUpon>
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>Static.resx</DependentUpon>
 		</Compile>
 	</ItemGroup>
 
@@ -49,8 +49,8 @@
 			<LastGenOutput>Langs.Designer.cs</LastGenOutput>
 		</EmbeddedResource>
 		<EmbeddedResource Update="Localization\Static.resx">
-		  <Generator>ResXFileCodeGenerator</Generator>
-		  <LastGenOutput>Static.Designer.cs</LastGenOutput>
+			<Generator>ResXFileCodeGenerator</Generator>
+			<LastGenOutput>Static.Designer.cs</LastGenOutput>
 		</EmbeddedResource>
 	</ItemGroup>
 
