--- a/.editorconfig
+++ b/.editorconfig
@@ -153,6 +153,14 @@ csharp_style_prefer_method_group_conversion = true:silent
 
 # IDE0036: 对修饰符排序
 dotnet_diagnostic.IDE0036.severity = silent
+csharp_style_prefer_top_level_statements = true:silent
+csharp_prefer_static_local_function = true:suggestion
+csharp_style_prefer_readonly_struct = true:suggestion
+csharp_style_allow_embedded_statements_on_same_line_experimental = true:silent
+csharp_space_around_binary_operators = ignore
+csharp_style_allow_blank_lines_between_consecutive_braces_experimental = true:silent
+csharp_style_pattern_matching_over_as_with_null_check = true:suggestion
+csharp_style_prefer_null_check_over_type_check = true:suggestion
 
 [*.vb]
 #### 命名样式 ####
@@ -211,3 +219,16 @@ dotnet_style_qualification_for_event = false:silent
 
 # Default severity for analyzer diagnostics with category 'Style'
 dotnet_analyzer_diagnostic.category-Style.severity = silent
+dotnet_style_require_accessibility_modifiers = for_non_interface_members:suggestion
+dotnet_code_quality_unused_parameters = all:suggestion
+dotnet_style_readonly_field = true:suggestion
+dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity:silent
+dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:silent
+dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:silent
+dotnet_style_parentheses_in_other_operators = never_if_unnecessary:silent
+dotnet_style_allow_multiple_blank_lines_experimental = true:silent
+dotnet_style_allow_statement_immediately_after_block_experimental = true:silent
+tab_width = 4
+indent_size = 4
+dotnet_style_null_propagation = true:suggestion
+dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
