--- a/.github/workflows/cleanartifacts.yml
+++ b/.github/workflows/cleanartifacts.yml
@@ -2,7 +2,8 @@ name: cleanartifacts
 
 on:
   schedule:
-    - cron: "0 3 * * *"
+    - cron: "0 1 * * *"
+  workflow_dispatch:
 
 jobs:
   remove-old-artifacts:
@@ -13,5 +14,4 @@ jobs:
       - name: Remove old artifacts
         uses: c-hive/gha-remove-artifacts@v1
         with:
-          age: "7 days"
-          skip-recent: 5
+          age: "1 seconds"
