--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -1,34 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<TargetFramework>net7.0</TargetFramework>
-		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-		<PackageProjectUrl>https://github.com/chr233/ASFEnhance</PackageProjectUrl>
-		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-		<PackageLicenseExpression>AGPLv3</PackageLicenseExpression>
-		<RootNamespace>ASFEnhance</RootNamespace>
-		<RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
 	</PropertyGroup>
+
 	<ItemGroup>
-		<None Remove="Data\FlyoutPage1.xaml" />
-		<None Remove="Data\FlyoutPage1Detail.xaml" />
-		<None Remove="Data\FlyoutPage1Flyout.xaml" />
+		<ProjectReference Include="..\ArchiSteamFarm\ArchiSteamFarm\ArchiSteamFarm.csproj"
+			ExcludeAssets="all" Private="False" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\ArchiSteamFarm\ArchiSteamFarm\ArchiSteamFarm.csproj" ExcludeAssets="all" Private="False" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="AngleSharp.XPath" Version="2.0.1" />
-		<PackageReference Include="ConfigureAwaitChecker.Analyzer" PrivateAssets="all" Version="5.0.0.1" />
-		<PackageReference Include="Newtonsoft.Json" IncludeAssets="compile" Version="13.0.2" />
-		<PackageReference Include="protobuf-net" Version="3.0.101" />
-		<PackageReference Include="SteamKit2" IncludeAssets="compile" Version="2.4.1" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
-		<PackageReference Include="System.Composition.AttributedModel" Version="7.0.0" />
+		<PackageReference Include="AngleSharp.XPath" />
+		<PackageReference Include="ConfigureAwaitChecker.Analyzer" PrivateAssets="all" />
+		<PackageReference Include="Newtonsoft.Json" IncludeAssets="compile" />
+		<PackageReference Include="protobuf-net" />
+		<PackageReference Include="SteamKit2" IncludeAssets="compile" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
+		<PackageReference Include="System.Composition.AttributedModel" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -57,10 +44,13 @@
 
 	<ItemGroup>
 		<None Include="..\.editorconfig" Link=".editorconfig" />
+		<None Include="..\Directory.Build.props" Link="Directory.Build.props" />
 	</ItemGroup>
-
+	
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-		<Copy SourceFiles="$(TargetPath)" DestinationFolder="..\ArchiSteamFarm\ArchiSteamFarm\bin\$(Configuration)\$(TargetFramework)\plugins\" SkipUnchangedFiles="true" />
+		<Copy SourceFiles="$(TargetPath)"
+			DestinationFolder="..\ArchiSteamFarm\ArchiSteamFarm\bin\$(Configuration)\$(TargetFramework)\plugins\"
+			SkipUnchangedFiles="true" />
 	</Target>
 
 </Project>
