--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -4,8 +4,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\ArchiSteamFarm\ArchiSteamFarm\ArchiSteamFarm.csproj"
-			ExcludeAssets="all" Private="False" />
+		<ProjectReference Include="..\ArchiSteamFarm\ArchiSteamFarm\ArchiSteamFarm.csproj" ExcludeAssets="all" Private="False" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -46,11 +45,16 @@
 		<None Include="..\.editorconfig" Link=".editorconfig" />
 		<None Include="..\Directory.Build.props" Link="Directory.Build.props" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Using Include="ASFEnhance.Localization" />
+	  <Using Include="ASFEnhance.Utils">
+	    <Static>True</Static>
+	  </Using>
+	</ItemGroup>
 	
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-		<Copy SourceFiles="$(TargetPath)"
-			DestinationFolder="..\ArchiSteamFarm\ArchiSteamFarm\bin\$(Configuration)\$(TargetFramework)\plugins\"
-			SkipUnchangedFiles="true" />
+		<Copy SourceFiles="$(TargetPath)" DestinationFolder="..\ArchiSteamFarm\ArchiSteamFarm\bin\$(Configuration)\$(TargetFramework)\plugins\" SkipUnchangedFiles="true" />
 	</Target>
 
 </Project>
