--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -91,8 +91,7 @@ jobs:
           tag_name: ${{ github.ref_name }}
           release_name: ASFEnhance ${{ github.ref_name }}
           body: |
-            ![ASFEnhance Release](https://img.shields.io/badge/ASFEnhance-${{ github.ref_name }}-brightgreen)
-            ![GitHub release (by tag)](https://img.shields.io/github/downloads/chr233/ASFenhance/${{ github.ref_name }}/total)
+            ![ASFEnhance Release](https://img.shields.io/badge/ASFEnhance-${{ github.ref_name }}-brightgreen) ![Downloads](https://img.shields.io/github/downloads/chr233/ASFenhance/${{ github.ref_name }}/total?label=Downloads)
 
             使用命令 `AU` 自动更新插件
             Use command `AU` to update this plugin
