--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: autobuild
+name: publish
 
 on:
   push:
@@ -81,15 +81,15 @@ jobs:
         with:
           name: ASFEnhance-ru-RU.zip
           path: out
-
-      - name: Create ASFEnhance GitHub release
-        id: github_release
-        uses: actions/create-release@v1.1.4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            
+      - name: Create ${{ env.PROJECT_NAME }} GitHub release
+        uses: ncipollo/release-action@v1.12.0
         with:
-          tag_name: ${{ github.ref_name }}
-          release_name: ASFEnhance ${{ github.ref_name }}
+          artifacts: "out/*"
+          makeLatest: false
+          prerelease: true
+          tag: ${{ github.ref_name }}
+          name: ${{ env.PROJECT_NAME }} ${{ github.ref_name }}
           body: |
             ![ASFEnhance Release](https://img.shields.io/badge/ASFEnhance-${{ github.ref_name }}-brightgreen) ![Downloads](https://img.shields.io/github/downloads/chr233/ASFenhance/${{ github.ref_name }}/total?label=Downloads)
 
@@ -97,34 +97,3 @@ jobs:
             Use command `AU` to update this plugin
 
             release created bt github actions
-          prerelease: true
-
-      - name: Upload ASFEnhance-zh-Hans to GitHub release
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.github_release.outputs.upload_url }}
-          asset_path: out/ASFEnhance-zh-Hans.zip
-          asset_name: ASFEnhance-zh-Hans.zip
-          asset_content_type: application/zip
-
-      - name: Upload ASFEnhance-en-US to GitHub release
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.github_release.outputs.upload_url }}
-          asset_path: out/ASFEnhance-en-US.zip
-          asset_name: ASFEnhance-en-US.zip
-          asset_content_type: application/zip
-
-      - name: Upload ASFEnhance-ru-RU to GitHub release
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.github_release.outputs.upload_url }}
-          asset_path: out/ASFEnhance-ru-RU.zip
-          asset_name: ASFEnhance-ru-RU.zip
-          asset_content_type: application/zip
