--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   PROJECT_NAME: "ASFEnhance"
+  REPO_NAME: "ASFEnhance"
   DOTNET_SDK_VERSION: 7.0.x
 
 jobs:
@@ -64,22 +65,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3.1.0
 
-      - name: Download ASFEnhance-zh-Hans artifact from windows-latest
+      - name: Download ${{ env.PROJECT_NAME }}-zh-Hans artifact from windows-latest
         uses: actions/download-artifact@v3.0.1
         with:
-          name: ASFEnhance-zh-Hans.zip
+          name: ${{ env.PROJECT_NAME }}-zh-Hans.zip
           path: out
 
-      - name: Download ASFEnhance-en-US artifact from windows-latest
+      - name: Download ${{ env.PROJECT_NAME }}-en-US artifact from windows-latest
         uses: actions/download-artifact@v3.0.1
         with:
-          name: ASFEnhance-en-US.zip
+          name: ${{ env.PROJECT_NAME }}-en-US.zip
           path: out
 
-      - name: Download ASFEnhance-ru-RU artifact from windows-latest
+      - name: Download ${{ env.PROJECT_NAME }}-ru-RU artifact from windows-latest
         uses: actions/download-artifact@v3.0.1
         with:
-          name: ASFEnhance-ru-RU.zip
+          name: ${{ env.PROJECT_NAME }}-ru-RU.zip
           path: out
             
       - name: Create ${{ env.PROJECT_NAME }} GitHub release
@@ -91,9 +92,8 @@ jobs:
           tag: ${{ github.ref_name }}
           name: ${{ env.PROJECT_NAME }} ${{ github.ref_name }}
           body: |
-            ![ASFEnhance Release](https://img.shields.io/badge/ASFEnhance-${{ github.ref_name }}-brightgreen) ![Downloads](https://img.shields.io/github/downloads/chr233/ASFenhance/${{ github.ref_name }}/total?label=Downloads)
+            ![Release](https://img.shields.io/badge/${{ env.REPO_NAME }}-${{ github.ref_name }}-brightgreen) ![Downloads](https://img.shields.io/github/downloads/chr233/${{ env.REPO_NAME }}/${{ github.ref_name }}/total?label=Downloads)
 
-            使用命令 `AU` 自动更新插件
-            Use command `AU` to update this plugin
+            ---
 
             release created bt github actions
