--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /ASFEnhance/Localization/Langs.resx
-    translation: /ASFEnhance/Localization/%file_name%-%two_letters_code%%file_extension%
+    translation: /ASFEnhance/Localization/%file_name%.%locale%.%file_extension%
