--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,6 +34,7 @@ jobs:
         run: dotnet --info
 
       - name: Change language file to ${{ matrix.language }}
+        if: ${{ matrix.language != 'zh-Hans' }}
         shell: pwsh
         run: |
           $projectName = "${{ env.PROJECT_NAME }}";
