ASF -> 5.5.3.4 System.Text.Json -> NewtonJson

--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -53,6 +53,7 @@
 	
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 		<Copy SourceFiles="$(TargetPath)" DestinationFolder="..\ArchiSteamFarm\ArchiSteamFarm\bin\$(Configuration)\$(TargetFramework)\plugins\" SkipUnchangedFiles="true" />
+		<Copy SourceFiles="$(TargetPath)" DestinationFolder="C:\Users\chr11\Downloads\asf-5.5.3.4\plugins\" SkipUnchangedFiles="true" />
 	</Target>
 
 </Project>
