--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,7 @@ on:
 env:
   PROJECT_NAME: "ASFEnhance"
   REPO_NAME: "ASFEnhance"
+  TARGET_FILTER : "ASFEnhance.dll"
   DOTNET_SDK_VERSION: 8.0.x
 
 jobs:
@@ -49,7 +50,7 @@ jobs:
         run: dotnet publish ${{ env.PROJECT_NAME }} -o ./tmp/ -c Release
 
       - name: Zip files
-        run: 7z a -bd -slp -tzip -mm=Deflate -mx=5 -mfb=150 -mpass=10 "./dist/${{ env.PROJECT_NAME }}-${{ matrix.language }}.zip" "./tmp/*.dll"
+        run: 7z a -bd -slp -tzip -mm=Deflate -mx=5 -mfb=150 -mpass=10 "./dist/${{ env.PROJECT_NAME }}-${{ matrix.language }}.zip" "./tmp/${{ env.TARGET_FILTER }}"
 
       - name: Upload ${{ env.PROJECT_NAME }} ${{ matrix.language }}
         continue-on-error: true
