feat 新增 STACKINVENTORY 命令

--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -13,6 +13,7 @@
 		<PackageReference Include="SteamKit2" IncludeAssets="compile" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
 		<PackageReference Include="System.Composition.AttributedModel" />
+		<PackageReference Include="System.Linq.Async" IncludeAssets="compile" />
 	</ItemGroup>
 
 	<ItemGroup>
