--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -49,6 +49,11 @@
 	    <Static>True</Static>
 	  </Using>
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="WishList\新文件夹1\" />
+	  <Folder Include="WishList\新文件夹\" />
+	</ItemGroup>
 	
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 		<Copy SourceFiles="$(TargetPath)" DestinationFolder="..\ArchiSteamFarm\ArchiSteamFarm\bin\$(Configuration)\$(TargetFramework)\plugins\" SkipUnchangedFiles="true" />
