--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -13,6 +13,10 @@
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
 		<PackageReference Include="System.Composition.AttributedModel" />
 		<PackageReference Include="System.Linq.Async" IncludeAssets="compile" />
+		<PackageReference Include="ConfigureAwaitChecker.Analyzer">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -44,17 +48,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Using Include="ASFEnhance.Localization" />
-	  <Using Include="ASFEnhance.Utils">
-	    <Static>True</Static>
-	  </Using>
+		<Using Include="ASFEnhance.Localization" />
+		<Using Include="ASFEnhance.Utils">
+			<Static>True</Static>
+		</Using>
 	</ItemGroup>
 
-	<ItemGroup>
-	  <Folder Include="WishList\新文件夹1\" />
-	  <Folder Include="WishList\新文件夹\" />
-	</ItemGroup>
-	
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 		<Copy SourceFiles="$(TargetPath)" DestinationFolder="..\ArchiSteamFarm\ArchiSteamFarm\bin\$(Configuration)\$(TargetFramework)\plugins\" SkipUnchangedFiles="true" />
 	</Target>
