--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,5 +1,6 @@
 <Project>
-  <Import Project="ArchiSteamFarm/Directory.Packages.props" />
-  <ItemGroup>
-  </ItemGroup>
+	<Import Project="ArchiSteamFarm/Directory.Packages.props" />
+	<ItemGroup>
+		<PackageVersion Include="ConfigureAwaitChecker.Analyzer" Version="5.0.0.1" />
+	</ItemGroup>
 </Project>
