--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,12 +22,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3.1.0
+        uses: actions/checkout@v4.1.7
         with:
           submodules: recursive
 
       - name: Setup .NET Core
-        uses: actions/setup-dotnet@v3.0.3
+        uses: actions/setup-dotnet@v4.0.1
         with:
           dotnet-version: ${{ env.DOTNET_SDK_VERSION }}
 
@@ -54,8 +54,9 @@ jobs:
 
       - name: Upload ${{ env.PROJECT_NAME }} ${{ matrix.language }}
         continue-on-error: true
-        uses: actions/upload-artifact@v3.1.1
+        uses: actions/upload-artifact@v4.3.6
         with:
+          if-no-files-found: error
           name: ${{ env.PROJECT_NAME }}-${{ matrix.language }}.zip
           path: ./dist/${{ env.PROJECT_NAME }}-${{ matrix.language }}.zip
 
@@ -68,25 +69,25 @@ jobs:
         uses: actions/checkout@v3.1.0
 
       - name: Download ${{ env.PROJECT_NAME }}-zh-Hans artifact from windows-latest
-        uses: actions/download-artifact@v4.1.7
+        uses: actions/download-artifact@v4.1.8
         with:
           name: ${{ env.PROJECT_NAME }}-zh-Hans.zip
           path: out
 
       - name: Download ${{ env.PROJECT_NAME }}-en-US artifact from windows-latest
-        uses: actions/download-artifact@v4.1.7
+        uses: actions/download-artifact@v4.1.8
         with:
           name: ${{ env.PROJECT_NAME }}-en-US.zip
           path: out
 
       - name: Download ${{ env.PROJECT_NAME }}-ru-RU artifact from windows-latest
-        uses: actions/download-artifact@v4.1.7
+        uses: actions/download-artifact@v4.1.8
         with:
           name: ${{ env.PROJECT_NAME }}-ru-RU.zip
           path: out
             
       - name: Create ${{ env.PROJECT_NAME }} GitHub release
-        uses: ncipollo/release-action@v1.12.0
+        uses: ncipollo/release-action@v1.14.0
         with:
           artifacts: "out/*"
           makeLatest: false
